Development history / change log, please read from bottom up

Version 3.4.0 - xx yyy 2019
Generic changes/fixes

Device specific changes/fixes
	* JetiAdapter - fix backward compatibility skipping sensor parameter without unit, result as missing measurement
	* HoTTAdapterD - correct indexing parse EAM *.log
	* HoTTAdapter2/D - enable selection of altitude/climb values source sensor *.log

Version 3.3.9 - 25 Aug 2019
Generic changes/fixes
	* update measurement properties XML containing [] by mistake
	* correct average calculation using trigger ranges
	* fix makensis languages.nsh encoding
	* add capability to integrate values by trigger (require XSD update)
	* update device properties editor to support capability to integrate values by trigger
	* update documentation
	
Device specific changes/fixes
	* HottAdapter* - correct trigger description text in XML
	* HoTTAdapter* - *.log remove evaluation of transmitter event and warning to avoid end user confusion
	* HottAdapter2 - fix channel zoom problem

Version 3.3.8 - 04 Aug 2019
Generic changes/fixes
	* catch possible IndexOutOfBoundsException while updating cell voltage window
	* 32 bit Linux lack of updates and seams still better compatible with GTK-2, use export SWT_GTK3=0 force using GTK-2 libs
	* update XSD to version 37 to enable sensor selection for altitude/climb values
	* update History analysis to use auto sensor selection for altitude/climb values 
	
Device specific changes/fixes
	* HoTTAdapterD - update Vario/ESC filter to synchronize with HottAdapter2
	* HoTTAdapterD - enable suppressing of lab calculation by smoothing value Rx dbm
	* HoTTAdapter2/D - enable selection of altitude/climb values source sensor
	* HoTTAdapter2 - fix power calculation while importing *.log EAM
	* HoTTAdapter2 - fix missing ESC parsing while configuration channels selected
	* HoTTAdapter* - fix/enable again capability to analyze log files written in SD-Format with 64 byte blocks  